--- a/frontend/src/VideoCarousel/VideoCarousel.css
+++ b/frontend/src/VideoCarousel/VideoCarousel.css
@@ -3,4 +3,15 @@
   flex-direction: row;
   overflow-x: auto;
   flex-wrap: nowrap;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+.carousel-container button {
+  min-width: 7.5rem;
+  min-height: 3rem;
+}
+
+.carousel-container button.selected {
+  border: 5px solid red; /* TODO: make button outline something that looks better */
 }
