--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,3 +3,13 @@
   flex-direction: column;
   gap: 2rem;
 }
+
+.dim-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 99;
+}
