--- a/frontend/src/SearchResults/SearchResults.css
+++ b/frontend/src/SearchResults/SearchResults.css
@@ -1,7 +1,6 @@
 .search-results-container {
   display: flex;
   flex-direction: column;
-  align-items: stretch;
   margin-top: 1rem;
 }
 
@@ -10,4 +9,5 @@
   color: white;
   border: none;
   font-size: 1rem;
+  align-self: flex-start;
 }
